[package]
name = "mdbook-katex-fork"
version = "0.10.0"
authors = [
    "TickPoints <tickpoints@outlook.com>",
    "Lucas Zanini <zanini.lcs@gmail.com>",
    "Steven Hé (Sīchàng) <stevensichanghe@gmail.com>",
]
edition = "2024"
description = "mdBook preprocessor rendering LaTeX equations to HTML."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TickPoints/mdbook-katex"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
mdbook-preprocessor = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "1.1"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
rayon = "1.11"
katex = { version = "0.4", default-features = false, optional = true }

[features]
default = ["quick-js"]
pre-render = ["dep:katex"]
quick-js = ["pre-render", "katex/quick-js"]
duktape = ["pre-render", "katex/duktape"]

[profile.release]
opt-level = "z"
lto = true
